--- a/projetoDev/src/main/resources/templates/pagina-index.html
+++ b/projetoDev/src/main/resources/templates/pagina-index.html
@@ -4,12 +4,21 @@
 <head>
 <meta charset="UTF-8">
 <title>Primeira Pagina</title>
+
+<link rel="stylesheet" th:href="@{/bootstrap-5.3.2-dist/css/bootstrap.min.css}">
+<script th:src="@{/code.jquery.com_jquery-3.7.1.min.js}"></script>
+<script th:src="@{/bootstrap-5.3.2-dist/js/bootstrap.min.js}"></script>
 </head>	
 
 <body>
+	<div class="container">
+		<div class="row">
+			<div class="col"></div>
+			<div class="colum">
 	<h2 th:text="${msnBemVindo}"></h2>
-	
-	
+				</div>
+	</div>
+	</div>
 </body>
 	
 	
