--- a/projetoDev/src/main/resources/templates/pagina-index.html
+++ b/projetoDev/src/main/resources/templates/pagina-index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-	
-<head>
-<meta charset="UTF-8">
-<title>Primeira Pagina</title>
 
-<link rel="stylesheet" th:href="@{/bootstrap-5.3.2-dist/css/bootstrap.min.css}">
-<script th:src="@{/code.jquery.com_jquery-3.7.1.min.js}"></script>
-<script th:src="@{/bootstrap-5.3.2-dist/js/bootstrap.min.js}"></script>
-</head>	
+<head>
+	<meta charset="UTF-8">
+	<title>Primeira Pagina</title>
+
+	<link rel="stylesheet" th:href="@{/bootstrap-5.3.2-dist/css/bootstrap.min.css}">
+	<script th:src="@{/code.jquery.com_jquery-3.7.1.min.js}"></script>
+	<script th:src="@{/bootstrap-5.3.2-dist/js/bootstrap.min.js}"></script>
+</head>
 
 <body>
 	<div class="container">
 		<div class="row">
 			<div class="col"></div>
 			<div class="colum">
-	<h2 th:text="${msnBemVindo}"></h2>
-				</div>
-	</div>
+				<h2 th:text="${msnBemVindo}"></h2>
+				<a class="btn btn-primary" href="/usuario/novo">Novo Usuário</a>
+			</div>
+		</div>
 	</div>
 </body>
-	
-	
-	
-	
-	
-	
+
+
+
+
+
+
 </html>
