--- a/projetoDev/src/main/resources/templates/pagina-index.html
+++ b/projetoDev/src/main/resources/templates/pagina-index.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
+	<div th:insert="fragments/publica-nav :: menuSuperior"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col"></div>
 			<div class="colum">
 				<h2 th:text="${msnBemVindo}"></h2>
-				<a class="btn btn-primary" href="/usuario/novo">Novo Usuário</a>
 			</div>
 		</div>
 	</div>
