--- a/projetoDev/src/main/resources/templates/publica-criar-usuario.html
+++ b/projetoDev/src/main/resources/templates/publica-criar-usuario.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+	<div th:insert="fragments/publica-nav :: menuSuperior"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col"></div>
