--- a/projetoDev/src/main/resources/templates/fragments/publica-nav.html
+++ b/projetoDev/src/main/resources/templates/fragments/publica-nav.html
@@ -17,6 +17,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="/usuario/novo">Cadastrar</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/usuario/admin/listar">Usuários</a>
+				</li>
 			</ul>
 		</div>
 	</nav>
