--- a/projetoDev/src/main/resources/templates/fragments/publica-nav.html
+++ b/projetoDev/src/main/resources/templates/fragments/publica-nav.html
@@ -18,7 +18,7 @@
 					<a class="nav-link" href="/usuario/novo">Cadastrar</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/usuario/admin/listar">Usuários</a>
+					<a class="nav-link" href="/usuario/listar">Usuários</a>
 				</li>
 			</ul>
 		</div>
