--- a/projetoDev/src/main/resources/templates/auth/admin/admin-listar-usuario.html
+++ b/projetoDev/src/main/resources/templates/auth/admin/admin-listar-usuario.html
@@ -52,6 +52,11 @@
 								onclick="if (!confirm(this.getAttribute('data-confirm-delete'))) return false"> APAGAR
 							</a>
 						</td>
+						<td>
+							<a class="btn btn-outline-primary btn-sm"
+								th:href="@{/usuario/editar/{id}(id=${percorrerLista.id})}"> EDITAR
+							</a>
+						</td>
 					</tr>
 
 				</tbody>
