--- a/projetoDev/src/main/resources/templates/publica-criar-usuario.html
+++ b/projetoDev/src/main/resources/templates/publica-criar-usuario.html
@@ -76,6 +76,7 @@
 					</div>
 					<div class="col-sm-5">
 						<span class="aviso" th:if="${#fields.hasErrors('login')}" th:errors="*{login}"></span>
+						<span class="aviso" th:if="${loginExiste}" th:text="${loginExiste}"></span>
 					</div>
 				</div>
 
