--- a/projetoDev/src/main/resources/templates/auth/admin/admin-editar-permissao-usuario.html
+++ b/projetoDev/src/main/resources/templates/auth/admin/admin-editar-permissao-usuario.html
@@ -97,6 +97,9 @@
 							</div>
 						</th:block>
 					</div>
+					<div class="col-sm-5">
+						<span class="aviso" th:if="${mensagem}" th:text="${mensagem}"></span>
+					</div>
 				</div>
 
 
